[package]
name = "tpng"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A small tool that prints truecolor png renderings to the terminal using unicode block characters"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#clap = { version = "3.1.16", features = ["derive"] }

colored = "2"
png = "0.17.5"
